# cryptoc

./: README.md  cryptoc.cabal
app/: Main.hs
src/Cryptoc/: BadCrypto.hs  DistCoin.hs  ScroogeCoin.hs
src/Cryptoc/DistCoin/: BlockChain.hs  Network.hs  Node.hs  Types.hs
