name:                cryptoc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ralphmorton/cryptoc#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           2016 Ralph Morton
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cryptoc.BadCrypto, Cryptoc.ScroogeCoin
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , cryptonite >= 0.10
                     , cryptohash >= 0.11.6
                     , stm >= 2.4.4.1
  default-language:    Haskell2010

executable cryptoc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cryptoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/cryptoc
